--- a/src/index.html
+++ b/src/index.html
@@ -46,5 +46,6 @@
 <studio-360-app></studio-360-app>
 
 <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
+<script async src="https://static.addtoany.com/menu/page.js"></script>
 </body>
 </html>
